# wasm-js-particle-comparison

./: Cargo.toml  LICENSE_MIT  README.md
docs/: bundle.min.js  bundle.min.js.map  index.html  particles.wasm
src/: lib.rs
www/: package.json  particles.ts  tsconfig.json  webpack.config.js
www/src/: bench.ts  config.ts  index.ts  styles.css
