[package]
name = "particles"
version = "0.1.0"
authors = ["Will Jutsum <will@tweededbadger.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand_chacha = "0.2.2"

console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true

[dependencies.rand]
version="0.7.3"
